<resources>
    <string name="app_name">Android Palette Demo</string>
    <string name="vibrant">Vibrant</string>
    <string name="vibrant_light">Vibrant Light</string>
    <string name="vibrant_dark">Vibrant Dark</string>
    <string name="muted">Muted</string>
    <string name="muted_light">Muted Light</string>
    <string name="muted_dark">Muted Dark</string>
    <string name="grid_activity_label">Grid Activity</string>
    <string name="second_image">Second Image</string>
    <string name="first_image">First Image</string>
    <string name="grid_palette_example">Grid Palette Example</string>
</resources>
